data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4211.wast
;; 10. **Test Description**: Ensure proper `call_indirect` behavior within a loop, where the function reference table is dynamically extended and accessed, validating boundary conditions and trapping on invalid access.     - *Constraint Checked*: Table structure extension and dynamic indexing.     - *Infinite Loop Context*: Any boundary transgression must trap, breaking the loop.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
    (func (loop (call_indirect (type 0) (i32.const 2)) (br 0)))
  )
  "index out of bounds"
)